--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hannah Wayment-Steele
 description: PhD student in Chemical Physics, Stanford University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/HWaymentSteele/HWaymentSteele.github.io/blob/master/images/DSC_0428.jpg
+avatar: https://raw.githubusercontent.com/HWaymentSteele/HWaymentSteele.github.io/blob/master/images/DSC_0428.jpg
 
 #
 # Flags below are optional
