--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hannah Wayment-Steele
+name: Hannah K. Wayment-Steele
 
 # Short bio or description (displayed in the header)
 description: PhD student in Chemical Physics, Stanford University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: raw.githubusercontent.com/HWaymentSteele/HWaymentSteele.github.io/master/images/DSC_0428.jpg
+avatar: HWaymentSteele.github.io/images/DSC_0428.jpg
 
 #
 # Flags below are optional
