--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://HWaymentSteele.github.io/images/DSC_0428.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: hannah.wayment.steele@gmail.com
   facebook:
   flickr:
   github: HWaymentSteele
   instagram:
-  linkedin: 
+  linkedin: hkws2011@pomona.edu
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: HWaymentSteele
