--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: HWaymentSteele
   instagram:
-  linkedin: hkws2011@pomona.edu
+  linkedin: hannah-wayment-steele-92b5a2a7
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: HWaymentSteele
