--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hannah K. Wayment-Steele
 description: PhD student in Chemical Physics, Stanford University
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://HWaymentSteele.github.io/images/DSC_0428.jpg
+avatar: https://HWaymentSteele.github.io/images/headshot_small.jpg
 
 #
 # Flags below are optional
