--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,10 @@
 name: Hannah K. Wayment-Steele
 
 # Short bio or description (displayed in the header)
-description: Theorist, Pattern-seeker, Synthesizer
+description: Interdisciplinary Theorist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://HWaymentSteele.github.io/images/headshot_small.png
-
-#
-# Flags below are optional
-#
 
 # Includes an icon in the footer for each username you enter
 footer-links:
@@ -30,7 +26,6 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
