--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Hannah K. Wayment-Steele
 
 # Short bio or description (displayed in the header)
-description: Theoretical Chemist
+description: Theoretical Chemist, RNA Designer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://HWaymentSteele.github.io/images/headshot_small.png
@@ -18,7 +18,7 @@ footer-links:
   facebook:
   flickr:
   github: HWaymentSteele
-  instagram:
+  instagram: hwaysteele
   linkedin: hannah-wayment-steele-92b5a2a7
   pinterest:
   rss: # just type anything here for a working RSS icon
