--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Hannah K. Wayment-Steele
 
 # Short bio or description (displayed in the header)
-description: Ph.D. Candidate interested in RNA folding, high-throughput experiment, stat mech, machine learning
+description: Learning RNA biophysics from high-throughput experiment
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://HWaymentSteele.github.io/images/headshot_small.png
