--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Hannah K. Wayment-Steele
 
 # Short bio or description (displayed in the header)
-description: Learning RNA biophysics from high-throughput experiment
+description: Scaling up how we understand dynamics in biology
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://HWaymentSteele.github.io/images/headshot_small.png
+avatar: https://HWaymentSteele.github.io/images/headshot_2021.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
