--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hannah K. Wayment-Steele
+name: Hannah Wayment-Steele, Ph.D.
 
 # Short bio or description (displayed in the header)
 description: Scaling up how we understand dynamics in biology
@@ -19,7 +19,7 @@ footer-links:
   flickr:
   github: HWaymentSteele
   instagram: hwaysteele
-  linkedin: hannah-wayment-steele-92b5a2a7
+  linkedin: hannah-wayment-steele-phd-92b5a2a7
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: HWaymentSteele
