--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Hannah Wayment-Steele, Ph.D.
 
 # Short bio or description (displayed in the header)
-description: Looking for biomolecular ensembles
+description: Looking for fold-switchers
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://HWaymentSteele.github.io/images/headshot_2021.png
