--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Hannah Wayment-Steele, Ph.D.
+name: John Janetzko, Ph.D.
 
 # Short bio or description (displayed in the header)
-description: Looking for fold-switchers
+description: Receptor trafficking and regulation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://HWaymentSteele.github.io/images/headshot_2021.png
@@ -17,12 +17,12 @@ footer-links:
   email: hannah.wayment.steele@gmail.com
   facebook:
   flickr:
-  github: HWaymentSteele
-  instagram: hwaysteele
-  linkedin: hannah-wayment-steele-phd-92b5a2a7
+  github: jjanetzk@stanford.edu
+  instagram: thejohnnler
+  linkedin: john-janetzko-673a5332
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: HWaymentSteele
+  twitter: jjanetzko
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -32,7 +32,7 @@ footer-links:
 disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: G-PFHT823YRT
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
