--- a/_config.yml
+++ b/_config.yml
@@ -9,15 +9,15 @@ name: John Janetzko, Ph.D.
 description: Receptor trafficking and regulation
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://HWaymentSteele.github.io/images/headshot_2021.png
+avatar: https://jjanetzko.github.io/images/DSC01759 copy.jpg
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: hannah.wayment.steele@gmail.com
+  email: jjanetzk@stanford.edu
   facebook:
   flickr:
-  github: jjanetzk@stanford.edu
+  github: jjanetzko
   instagram: thejohnnler
   linkedin: john-janetzko-673a5332
   pinterest:
