--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,17 @@ avatar: https://jjanetzko.github.io/images/DSC01759 copy.jpg
 footer-links:
   dribbble:
   email: jjanetzk@stanford.edu
+  facebook:
+  flickr:
   github: jjanetzko
   instagram: thejohnnler
   linkedin: john-janetzko-673a5332
-  scholar_userid: -a9nNtM8AAAAJ # your Google Scholar ID
-  orcid_id: 0000-0003-1604-2515 # your ORCID ID
+  pinterest:
+  rss: # just type anything here for a working RSS icon
   twitter: jjanetzko
+  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  youtube: # channel/<your_long_string> or user/<user-name>
+  googleplus: # anything in your profile username that comes after plus.google.com/
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
